Add Classes needed

--- a/CAB301ProjectManageDVDs/CAB301ProjectManageDVDs.csproj
+++ b/CAB301ProjectManageDVDs/CAB301ProjectManageDVDs.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Member.cs" />
+    <Compile Include="MemberCollection.cs" />
+    <Compile Include="Movie.cs" />
+    <Compile Include="MovieCollection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
